--- a/research.html
+++ b/research.html
@@ -231,7 +231,7 @@
                         <br>
 
 
-<!--                         <p>
+                        <p>
                             <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
@@ -240,7 +240,22 @@
                             <br>
                             <a href="https://qihongl.github.io/docs/CEMS19_poster_wait_ql.pdf">poster</a>
                         </p>
-                        <br> -->
+                        <br>
+
+                        <p>
+                            <b>BrainIAK tutorials: user-friendly learning materials for advanced fMRI analysis</b>
+                            <br>
+                            Kumar, M., Ellis, C.T., Lu, Q., Zhang, H., Capota, M., Willke, T.L., Ramadge, P.J., Turk-Browne, N.B., & Norman, K.A. (2019)
+                            <br>
+                            Society for neuroscience conference (SfN)
+                            <br>
+                            <a href="https://osf.io/j4sbc/">paper</a>,
+                            <a href="https://brainiak.org/tutorials/">tutorial</a>,
+                            <a href="https://twitter.com/manojneuro/status/1137850837684891650">poster</a>
+                            <br>
+                        </p>
+                        <br>
+
 
                         <p>
                             <b>Modeling hippocampal-cortical dynamics during event processing</b>
