update paper name

--- a/research.html
+++ b/research.html
@@ -174,7 +174,7 @@
                         <br>
 
                         <p>
-                            <b>Learning to apply schematic knowledge to novel instances</b>
+                            <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
                             <br>
                             Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2019)
                             <br>
@@ -196,7 +196,6 @@
                             <a href="https://arxiv.org/abs/1811.11684">paper</a>,
                             <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
                             <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
-
                         </p>
                         <br>
 
