--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <h3>
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-        <strong>Welcome to my personal webpage!</strong>
+        <!-- <strong>Welcome to my personal webpage!</strong> -->
       </h3>
 
       <br>
@@ -99,23 +99,14 @@
         and
         <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
         at Princeton.
-        I'm working on models of episodic memory.
-        Here's my
-        <a href="docs/CV_QL.pdf">CV</a>.
+        I use computational models to understand how episodic memory can be most effectively deployed in the service of event processing.
+        Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
-        <br>
+        <br><br>
         I'm organizing the
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
         feel free to contact me if you would like to give a talk.
 
-        <!-- a weekly meeting on neural/cognitive computational models.
-Feel free to contact me if you (including external speakers) would like to ...
-    <ul>
-    <li>join the mailing list</li>
-    <li>present your work</li>
-    <li>propose some external speaker(s)</li>
-    <li>anything PDP related!</li>
-</ul> -->
 
     </section>
 
