--- a/research.html
+++ b/research.html
@@ -150,7 +150,7 @@
                         <a href="#Conference-presentations">Conference presentations</a> -->
             <h3>
               <!-- <p><strong><a id="Preprints">Preprints</a></strong></p> -->
-              <p><strong>Preprints</strong></p>
+              <p><strong>Papers & Preprints</strong></p>
             </h3>
 
             <p>
