--- a/research.html
+++ b/research.html
@@ -108,8 +108,19 @@
         <div id="Selected" class="tabcontent" style="display:block">
           <p>
             <br>
-
             <br>
+
+            <p>
+              <b>Learning when to recall</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2020)
+              <br>
+              Neuromatch
+              <br>
+              <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">Slides</a>
+            </p>
+            <br>
+
             <p>
               <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
               <br>
@@ -221,6 +232,16 @@
               <p><strong>Conference presentations</strong></p>
             </h3>
 
+            <p>
+              <b>Learning when to recall</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2020)
+              <br>
+              Neuromatch
+              <br>
+              <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">Slides</a>
+            </p>
+            <br>
 
             <br>
             <p>
