update deepmath info

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
         <br><br>
+        We are accepting submissions for poster presentations for our upcoming
+        <a href='https://www.deepmath-conference.com/submissions'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>.
+
+        <br><br>
         I'm organizing the
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
         feel free to contact me if you would like to give a talk.
