--- a/teaching.html
+++ b/teaching.html
@@ -157,7 +157,8 @@
           <li>
             A memory-augmented neural network
             <br>
-            code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a>
+            code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a> |
+            <a href="https://docs.google.com/presentation/d/1uk9-EhsFwdIr9r5eWahs-GXPBUnioDC5xkqF4do3Css/edit?usp=sharing">slides</a>
           </li>
 
           <li>
