deepmath covid update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <p>
         Hi, my name is Qihong Lu.
-        I'm a grad student with
+        I'm a PhD candidate with
         <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
         and
         <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
@@ -102,15 +102,17 @@
         I use computational models to understand how episodic memory can be most effectively deployed in the service of event processing.
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
+        <br><br><br>
+        News:
         <br><br>
-        We are accepting submissions for poster presentations for our upcoming
+        1. We are accepting submissions for poster presentations for our upcoming
         <a href='https://www.deepmath-conference.com/submissions'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>.
+        Due to COVID19, the conference will be hosted online and the submission deadline has been pushed to to August 1, 2020.
 
         <br><br>
-        I'm organizing the
-        <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
+        2. I'm organizing the weekly
+        <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
         feel free to contact me if you would like to give a talk.
-
 
     </section>
 
