--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <br><br>
         1. We are accepting submissions for poster presentations for our upcoming
         <a href='https://www.deepmath-conference.com/submissions'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>.
-        Due to COVID19, the conference will be hosted online and the submission deadline has been pushed to to August 1, 2020.
+        Due to COVID19, the conference will be hosted online and the submission deadline has been pushed to August 1, 2020.
 
         <br><br>
         2. I'm organizing the weekly
