--- a/index.html
+++ b/index.html
@@ -108,9 +108,16 @@
         1. We are accepting submissions for poster presentations for our upcoming
         <a href='https://www.deepmath-conference.com/submissions'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>.
         Due to COVID19, the conference will be hosted online and the submission deadline has been pushed to August 1, 2020.
+        Videos from last year's conference are posted <a href ='https://www.youtube.com/channel/UCamugMiftSeZo4EjdtePPyw'>here</a>.
 
         <br><br>
-        2. I'm organizing the weekly
+        2. We will be hosting an advanced fMRI analysis workshop at
+        <a href='https://www.humanbrainmapping.org/i4a/pages/index.cfm?pageid=3267&pageid=1'>OHBM 2020</a>.
+        Here's the project site:
+        <a href='https://github.com/ohbm/hackathon2020/issues/109'>Learn and Enhance BrainIAK Tutorials: From Basics to Advanced fMRI Analyses</a>.
+
+        <br><br>
+        3. I'm organizing the weekly
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
         feel free to contact me if you would like to give a talk.
 
