update cems info

--- a/index.html
+++ b/index.html
@@ -105,19 +105,24 @@
         <br><br><br>
         News:
         <br><br>
-        1. We are accepting submissions for poster presentations for our upcoming
+        1. Talk, August 18th: Learning to use episodic memory for event prediction, at the
+        <a href='http://memory.psych.upenn.edu/CEMS_2020#:~:text=The%202020%20Context%20and%20Episodic,virtually%20from%20August%2016th%2D19th.&text=The%20symposium%20is%20designed%20to,and%20episodic%20memory%2C%20broadly%20construed.'>
+        Context and Episodic Memory Symposium 2020</a>
+
+        <br><br>
+        2. We are accepting submissions for poster presentations for our upcoming
         <a href='https://www.deepmath-conference.com/submissions'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>.
         Due to COVID19, the conference will be hosted online and the submission deadline has been pushed to August 1, 2020.
         Videos from last year's conference are posted <a href ='https://www.youtube.com/channel/UCamugMiftSeZo4EjdtePPyw'>here</a>.
 
         <br><br>
-        2. We will be hosting an advanced fMRI analysis workshop at
+        3. We will be hosting an advanced fMRI analysis workshop at
         <a href='https://www.humanbrainmapping.org/i4a/pages/index.cfm?pageid=3267&pageid=1'>OHBM 2020</a>.
         Here's the project site:
         <a href='https://github.com/ohbm/hackathon2020/issues/109'>Learn and Enhance BrainIAK Tutorials: From Basics to Advanced fMRI Analyses</a>.
 
         <br><br>
-        3. I'm organizing the weekly
+        4. I'm organizing the weekly
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
         feel free to contact me if you would like to give a talk.
 
