--- a/research.html
+++ b/research.html
@@ -110,6 +110,20 @@
             <br>
             <br>
 
+
+
+            <p>
+              <b>Learning to use episodic memory for event prediction</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2020)
+              <br>
+              Context and Episodic Memory Symposium (CEMS)
+              <br>
+              preprint, slides, code
+            </p>
+            <br>
+
+
             <p>
               <b>Learning when to recall</b>
               <br>
