update slides url

--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
               <br>
               Context and Episodic Memory Symposium (CEMS)
               <br>
-              preprint, slides, code
+              <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
             </p>
             <br>
 
@@ -131,7 +131,7 @@
               <br>
               Neuromatch
               <br>
-              <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">Slides</a>
+              <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">slides</a>
             </p>
             <br>
 
