--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <br><br><br>
         News:
         <br><br>
-        1. Talk, August 18th: Learning to use episodic memory for event prediction, at the
+        1. August 18th: I will be presenting our recent work - Learning to use episodic memory for event prediction (<a href='https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing'>slides</a>) - at the
         <a href='http://memory.psych.upenn.edu/CEMS_2020#:~:text=The%202020%20Context%20and%20Episodic,virtually%20from%20August%2016th%2D19th.&text=The%20symposium%20is%20designed%20to,and%20episodic%20memory%2C%20broadly%20construed.'>
         Context and Episodic Memory Symposium 2020</a>
 
