update deepmath-related info

--- a/research.html
+++ b/research.html
@@ -125,17 +125,6 @@
 
 
             <p>
-              <b>Learning when to recall</b>
-              <br>
-              Lu, Q., Hasson, U., & Norman, K. A. (2020)
-              <br>
-              Neuromatch
-              <br>
-              <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">slides</a>
-            </p>
-            <br>
-
-            <p>
               <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
               <br>
               Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
@@ -245,6 +234,17 @@
               <!-- <p><strong><a id="Conference-presentations">Conference presentations</a></strong></p> -->
               <p><strong>Conference presentations</strong></p>
             </h3>
+
+            <p>
+              <b>Learning to use episodic memory for event prediction</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2020)
+              <br>
+              Context and Episodic Memory Symposium (CEMS)
+              <br>
+              <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
+            </p>
+            <br>
 
             <p>
               <b>Learning when to recall</b>
