--- a/research.html
+++ b/research.html
@@ -119,6 +119,7 @@
               <br>
               Context and Episodic Memory Symposium (CEMS)
               <br>
+              <a href="https://youtu.be/I7WoqjV8zCc?t=2206">video</a>,
               <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
             </p>
             <br>
