--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <br>
       <center>
-        <p style="width: 600px;"><img src="/imgs/myPics/me_slc.png"></p>
+        <p style="width: 600px;"><img src="/imgs/myPics/me.png"></p>
       </center>
 
       <p>
