--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
 
         <br><br><br>
         News:
+        <br>
+        0. We just posted a preprint:
+        <a href='https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1'>Learning to use episodic memory for event prediction</a> with
+        <a href='https://github.com/qihongl/learn-hippo'>code</a>!
+        And I will give a talk at the upcoming <a href='https://www.cogneurosociety.org/invited-symposium-sessions/'>CNS 2021</a>! 
+
         <br><br>
         1. The video recordings of
         <a href='https://deepmath-conference.com/'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>
