--- a/research.html
+++ b/research.html
@@ -110,33 +110,22 @@
             <br>
             <br>
 
-
-
             <p>
               <b>Learning to use episodic memory for event prediction</b>
               <br>
-              Lu, Q., Hasson, U., & Norman, K. A. (2020)
+              Lu, Q., Hasson, U., & Norman, K. A. (2020).
               <br>
-              Context and Episodic Memory Symposium (CEMS)
+              bioRxiv.
               <br>
+              <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>,
+              <a href="https://github.com/qihongl/learn-hippo">code</a>
+              <br>
+              talk presented at CEMS 2020:
               <a href="https://youtu.be/I7WoqjV8zCc?t=2206">video</a>,
               <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
+              <br>
             </p>
             <br>
-
-
-            <p>
-              <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
-              <br>
-              Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
-              <br>
-              The Conference on Cognitive Computational Neuroscience (CCN)
-              <br>
-              <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
-              <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
-            </p>
-            <br>
-
 
             <p>
               <b>Shared representational geometry across neural networks</b>
@@ -149,7 +138,6 @@
               <a href="https://arxiv.org/abs/1811.11684">paper</a>,
               <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
               <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
-              <!-- <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a> -->
             </p>
 
           </p>
@@ -167,6 +155,36 @@
               <!-- <p><strong><a id="Preprints">Preprints</a></strong></p> -->
               <p><strong>Papers & Preprints</strong></p>
             </h3>
+
+            <p>
+              <b>Learning to use episodic memory for event prediction</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2020).
+              <br>
+              bioRxiv.
+              <br>
+              <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>,
+              <a href="https://github.com/qihongl/learn-hippo">code</a>
+
+              <br>
+            </p>
+            <br>
+
+
+            <p>
+              <b>BrainIAK: Brain Imaging and Analysis Kit</b>
+              <br>
+              Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., Lu, Q., Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R., Schapiro, A.C., Schuck, N.W., Shvartsman, M., Sundaram, N., Suo, D., Turek, J.S., Vo, V.A., Wallace, G., Wang, Y., Zhang, H., Zhu, X., Capota, M., Cohen, J.D., Hasson, U., Li, K., Ramadge, P.J., Turk-Browne, N.B., Willke, T.L. & Norman, K.A. (2020)
+              <br>
+              OSF preprints.
+              <br>
+              <a href="https://osf.io/db2ev/">paper</a>,
+              <a href="https://github.com/brainiak/brainiak-aperture">code</a>
+              <br>
+            </p>
+            <br>
+
+
 
             <p>
               <b>BrainIAK tutorials: User-friendly learning materials for advanced fMRI analysis</b>
@@ -243,6 +261,7 @@
               <br>
               Context and Episodic Memory Symposium (CEMS)
               <br>
+              <a href="https://youtu.be/I7WoqjV8zCc?t=2206">video</a>,
               <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
             </p>
             <br>
