add url to CNS talk slides

--- a/research.html
+++ b/research.html
@@ -116,13 +116,17 @@
               Lu, Q., Hasson, U., & Norman, K. A. (2020).
               <br>
               bioRxiv.
-              <br>
               <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>,
               <a href="https://github.com/qihongl/learn-hippo">code</a>
               <br>
-              talk presented at CEMS 2020:
+              I talked simulation 3, 4, and 6 at CEMS 2020:
               <a href="https://youtu.be/I7WoqjV8zCc?t=2206">video</a>,
               <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
+              <br>
+              I mainly talked about simulation 5 and 6 at CNS 2021:
+              video,
+              <!-- <a href="">video</a>, -->
+              <a href="https://docs.google.com/presentation/d/1XZRxbPL5WUfUhIRP_pNsQ43tqzfQ6C-9fquiqucItFY/edit?usp=sharing">slides</a>
               <br>
             </p>
             <br>
@@ -253,6 +257,22 @@
               <!-- <p><strong><a id="Conference-presentations">Conference presentations</a></strong></p> -->
               <p><strong>Conference presentations</strong></p>
             </h3>
+
+            <p>
+              <b>Modeling when episodic encoding should take place to support event prediction</b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2021)
+              <br>
+              Cognitive Neuroscience Society (CNS) Annual meeting
+              <br>
+              Invited symposium on how prior knowledge shapes encoding of new memories
+              <br>
+              video,
+              <!-- <a href="">video</a>, -->
+              <a href="https://docs.google.com/presentation/d/1XZRxbPL5WUfUhIRP_pNsQ43tqzfQ6C-9fquiqucItFY/edit?usp=sharing">slides</a>
+            </p>
+            <br>
+
 
             <p>
               <b>Learning to use episodic memory for event prediction</b>
