--- a/teaching.html
+++ b/teaching.html
@@ -88,6 +88,25 @@
         <p> <strong>Courses</strong></p>
       </h3>
 
+
+      <p>
+        <strong>Fall 2018, Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
+        <br>
+        &emsp;
+        <a href="https://registrar.princeton.edu/course-offerings/course-details?term=1214&courseid=011565">offcial course description</a>
+        |
+        <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
+        <br>
+        &emsp; The Jupyter notebooks for the labs are publicly available
+        <a href="https://brainiak.org/tutorials/">here</a>!
+
+      </p>
+
+
+      <br>
+      <hr>
+
+
       <p>
         <strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
         <br>
@@ -168,7 +187,7 @@
           </li>
         </ul>
 
-        <br>
+        <!-- <br>
         Here're some awesome demos I found online:
         <ul>
           <li>
@@ -188,43 +207,17 @@
           </li>
 
         </ul>
-      </p>
-
-      <br><br>
-      <hr>
+      </p> -->
 
 
-      <p>
-        <strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
-        <br>
-        &emsp;
-        <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
-        |
-        <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
-        <br>
-        <b>
-          &emsp; The Jupyter notebooks used for the labs are publicly available
-          <a href="https://brainiak.org/tutorials/">here</a>!
-        </b>
-      </p>
-      <br>
-
-      Other resources:
-      <ul>
-        <li>
-          <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
-        </li>
-        <li>
-          <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
-        </li>
-        <li>
-          <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
-        </li>
-      </ul>
 
       <br>
       <br>
-      <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
+      <!-- <p style="text-align:center;"> -->
+      <img src="imgs/misc/git_in_case_of_fire.png" alt="git" width="300">
+      <!-- </p> -->
+
+
 
 
     </section>
