update some links

--- a/research.html
+++ b/research.html
@@ -71,11 +71,6 @@
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
 
-      <!-- <p class="view">
-        <a href="mailto:qlu@princeton.edu" target="_top">
-          <img src="imgs/logo/email.png" alt="email" width=40px></a>
-      </p> -->
-
     </header>
 
     <!-- the END of left column  -->
@@ -92,73 +87,41 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <ul class="tab">
+
           <li>
-            <a href="#" class="tablinks active" onclick="openTab(event, 'Selected')">
-              Selected
+            <a href="#" class="tablinks active" onclick="openTab(event, 'paper')">
+              Papers & Preprints
             </a>
           </li>
+
           <li>
-            <a href="#" class="tablinks" onclick="openTab(event, 'not-that-selected')">
-              Not that selected
+            <a href="#" class="tablinks" onclick="openTab(event, 'talk')">
+              Talks
             </a>
           </li>
+
+          <li>
+            <a href="#" class="tablinks" onclick="openTab(event, 'poster')">
+              Posters
+            </a>
+          </li>
+
         </ul>
 
 
-        <div id="Selected" class="tabcontent" style="display:block">
-          <p>
-            <br>
-            <br>
+        <div id="paper" class="tabcontent" style="display:block"><br>
 
             <p>
-              <b>Learning to use episodic memory for event prediction</b>
+              <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
               <br>
-              Lu, Q., Hasson, U., & Norman, K. A. (2020).
+              Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2021)
               <br>
-              bioRxiv.
-              <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>,
-              <a href="https://github.com/qihongl/learn-hippo">code</a>
+              PeerJ
               <br>
-              I talked simulation 3, 4, and 6 at CEMS 2020:
-              <a href="https://youtu.be/I7WoqjV8zCc?t=2206">video</a>,
-              <a href="https://docs.google.com/presentation/d/1YIGaSRm09WqGomYOzRpk45RmvMYyL3idNDENGnbChXs/edit?usp=sharing">slides</a>
-              <br>
-              I mainly talked about simulation 5 and 6 at CNS 2021:
-              video,
-              <!-- <a href="">video</a>, -->
-              <a href="https://docs.google.com/presentation/d/1XZRxbPL5WUfUhIRP_pNsQ43tqzfQ6C-9fquiqucItFY/edit?usp=sharing">slides</a>
-              <br>
+              <a href="https://peerj.com/articles/11046/">paper</a>,
+              <a href="https://github.com/cchen23/generalized_schema_learning">code</a>
             </p>
             <br>
-
-            <p>
-              <b>Shared representational geometry across neural networks</b>
-              <br>
-              Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
-              <br>
-              Workshop on Integration of Deep Learning Theories, NeurIPS.
-              <br>
-              <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
-              <a href="https://arxiv.org/abs/1811.11684">paper</a>,
-              <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
-              <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
-            </p>
-
-          </p>
-        </div>
-
-
-        <div id="not-that-selected" class="tabcontent">
-          <p>
-            <br>
-
-
-            <!-- <a href="#Preprints">Preprints</a>|
-                        <a href="#Conference-presentations">Conference presentations</a> -->
-            <h3>
-              <!-- <p><strong><a id="Preprints">Preprints</a></strong></p> -->
-              <p><strong>Papers & Preprints</strong></p>
-            </h3>
 
             <p>
               <b>Learning to use episodic memory for event prediction</b>
@@ -217,18 +180,6 @@
             <br>
 
             <p>
-              <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
-              <br>
-              Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2019)
-              <br>
-              arXiv
-              <br>
-              <a href="https://arxiv.org/abs/1902.09006">paper</a>,
-              <a href="https://github.com/cchen23/generalized_schema_learning">code</a>
-            </p>
-            <br>
-
-            <p>
               <b>Shared representational geometry across neural networks</b>
               <br>
               Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
@@ -252,11 +203,40 @@
 
 
 
-            <br><br>
-            <h3>
-              <!-- <p><strong><a id="Conference-presentations">Conference presentations</a></strong></p> -->
-              <p><strong>Conference presentations</strong></p>
-            </h3>
+
+          </p>
+        </div>
+
+        <div id="talk" class="tabcontent"><br>
+            <p>
+              <b>When to recall and encode episodic memory. </b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2021).
+              <br>
+              DeepMind
+              <br>
+            </p>
+            <br>
+
+            <p>
+              <b>When to recall and encode episodic memory. </b>
+              <br>
+              Lu, Q., Hasson, U., & Norman, K. A. (2021).
+              <br>
+              Oxford Neurotheory Lab, University of Oxford. PI: Andrew Saxe.
+              <br>
+            </p>
+            <br>
+
+            <p>
+              <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
+              <br>
+              Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2021)
+              <br>
+              Oxford Neurotheory Lab, University of Oxford. PI: Andrew Saxe.
+              <br>
+            </p>
+            <br>
 
             <p>
               <b>Modeling when episodic encoding should take place to support event prediction</b>
@@ -267,12 +247,10 @@
               <br>
               Invited symposium on how prior knowledge shapes encoding of new memories
               <br>
-              video,
-              <!-- <a href="">video</a>, -->
+              <a href="https://youtu.be/IiJHdrqwVWE">video</a>,
               <a href="https://docs.google.com/presentation/d/1XZRxbPL5WUfUhIRP_pNsQ43tqzfQ6C-9fquiqucItFY/edit?usp=sharing">slides</a>
             </p>
             <br>
-
 
             <p>
               <b>Learning to use episodic memory for event prediction</b>
@@ -296,7 +274,10 @@
               <a href="https://docs.google.com/presentation/d/1XU_XcdTK_GSN8n9VFT9y_uHK4CGC5LoLpjHk7NM6EVA/edit?usp=sharing">Slides</a>
             </p>
 
-            <br>
+            </div>
+
+            <div id="poster" class="tabcontent"><br>
+
             <p>
               <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
               <br>
