--- a/teaching.html
+++ b/teaching.html
@@ -84,21 +84,28 @@
 
     <section>
 
-      <h3>
-        <p> <strong>Courses</strong></p>
-      </h3>
-
 
       <p>
-        <strong>Fall 2018, Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
+        <strong>Summer 2021, Deep learning, <a href="https://academy.neuromatch.io/">Neuromatch Academy</a></strong>
+        <br>
+        &emsp;
+        <a href="https://github.com/NeuromatchAcademy/course-content-dl">syllabus</a>
+        <br><br>
+      </p>
+
+      <hr>
+
+      <p>
+        <strong>Fall 2018 & Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
         <br>
         &emsp;
         <a href="https://registrar.princeton.edu/course-offerings/course-details?term=1214&courseid=011565">offcial course description</a>
         |
         <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
-        <br>
-        &emsp; The Jupyter notebooks for the labs are publicly available
-        <a href="https://brainiak.org/tutorials/">here</a>!
+        <br><br>
+
+        &emsp; <b>The Jupyter notebooks we developed for the labs are publicly available
+        <a href="https://brainiak.org/tutorials/">here</a>! </b>
 
       </p>
 
@@ -117,7 +124,7 @@
         <br>
         <br>
 
-        Here're some demos. Most of them are on google colab. Let me know if you have trouble running any of them.
+        Here're some minimal model demos that I wrote. Most of them are on google colab. Let me know if you have trouble running any of them!
         <ul>
           <li>
             Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
@@ -146,11 +153,17 @@
             code: <a href="https://github.com/qihongl/demo-q-learning">pytorch and numpy</a>
           </li>
 
-          <!-- <li>
-                        Advantage actor critic, some openAI gym environment
-                        <br>
-                        code: <a href="https://github.com/qihongl/demo-advantage-actor-critic">pytorch</a>
-                    </li> -->
+          <li>
+            RL Training with random search, grid world navigation
+            <br>
+            code: <a href="https://github.com/qihongl/demo-random-search-RL">pytorch</a>
+          </li>
+
+          <li>
+            Advantage actor critic, openAI gym
+            <br>
+            code: <a href="https://github.com/qihongl/demo-advantage-actor-critic">pytorch</a>
+          </li>
 
           <li>
             Recurrent neural network, statistical learning
@@ -208,7 +221,6 @@
 
         </ul>
       </p> -->
-
 
 
       <br>
