--- a/index.html
+++ b/index.html
@@ -107,18 +107,19 @@
         <br>
         0. We just posted a preprint:
         <a href='https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1'>Learning to use episodic memory for event prediction</a> with
-        <a href='https://github.com/qihongl/learn-hippo'>code</a>!
-        And I will give a talk at the upcoming <a href='https://www.cogneurosociety.org/invited-symposium-sessions/'>CNS 2021</a>! 
+        <a href='https://github.com/qihongl/learn-hippo'>code</a>! And I presented this work at
+        <a href='https://www.youtube.com/watch?v=IiJHdrqwVWE'>CNS 2021</a>,
+        <a href='https://www.saxelab.org/'>Oxford Neurotheory Lab,</a>
+        and Deepmind.
 
         <br><br>
-        1. The video recordings of
-        <a href='https://deepmath-conference.com/'>Conference on the Mathematical Theory of Deep Neural Networks 2020</a>
-        are posted <a href ='https://www.youtube.com/channel/UCamugMiftSeZo4EjdtePPyw'>here</a>.
+        1. I will be helping with
+        <a href='https://academy.neuromatch.io/'>Neuromatch Academy</a> to teach deep learning this August!
 
         <br><br>
-        2. I'm organizing the weekly
+        *. I'm organizing the weekly
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
-        feel free to contact me if you would like to give a talk.
+        feel free to contact me if you would like to give a talk!
 
     </section>
 
