update some links

--- a/teaching.html
+++ b/teaching.html
@@ -104,8 +104,35 @@
         <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
         <br><br>
 
-        &emsp; <b>The Jupyter notebooks we developed for the labs are publicly available
+        <b>The Jupyter notebooks we made for the labs are publicly available
         <a href="https://brainiak.org/tutorials/">here</a>! </b>
+        <br>
+
+        Some slides used for the labs:
+        <ul>
+          <li>
+            <a href="https://docs.google.com/presentation/d/1cQkqoW9Lg9AKDuWKt3X_NHt-RxxPCM-wgS32HBX1_ok/edit?usp=sharing">
+              Logistics; fMRI data format
+            </a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/presentation/d/1cQkqoW9Lg9AKDuWKt3X_NHt-RxxPCM-wgS32HBX1_ok/edit?usp=sharing">
+              Classification and hyperparameter tuning
+            </a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/presentation/d/191ADfuS_WIlKjpkNidjRpkC394CUvSGaeWOL4CGImU4/edit?usp=sharing">
+              Inter-subject connectivity, functional connectivity and representational similarity
+            </a>
+          </li>
+          <li>
+            <a href="https://docs.google.com/presentation/d/1_sj3bHo8-ltqePsKvIr2kBLAr9E9foY7nsY04OemZrA/edit?usp=sharing">
+              Functional alignment and the shared response model
+            </a>
+          </li>
+        </ul>
+
+        <a href='https://github.com/qihongl/demo-mds'>Why you should play with the error threshold in sklearn</a>
 
       </p>
 
@@ -124,7 +151,7 @@
         <br>
         <br>
 
-        Here're some minimal model demos that I wrote. Most of them are on google colab. Let me know if you have trouble running any of them!
+        Here're some minimal model demos I wrote. Most of them are on google colab. Let me know if you have trouble running any of them!
         <ul>
           <li>
             Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
