--- a/teaching.html
+++ b/teaching.html
@@ -48,10 +48,10 @@
       </p>
       <p class="view">
         <h4>Teaching</h4>
-      </p>
-      <!-- <p class="view"><a href="resources.html">
-                    <h4>Resources</h4>
-                </a></p> -->
+      <!-- </p>
+      <p class="view"><a href="resources.html">
+    <h4>Resources</h4>
+  </a></p> -->
       <p class="view">
         <h4><a href="contact.html">Contact</a></h4>
       </p>
@@ -111,7 +111,7 @@
         Some slides used for the labs:
         <ul>
           <li>
-            <a href="https://docs.google.com/presentation/d/1cQkqoW9Lg9AKDuWKt3X_NHt-RxxPCM-wgS32HBX1_ok/edit?usp=sharing">
+            <a href="https://docs.google.com/presentation/d/1BlMT4zy822S_3TXmTGn7ZyhRiNu3OEzJ1wRGV6_8KTU/edit?usp=sharing">
               Logistics; fMRI data format
             </a>
           </li>
