--- a/index.html
+++ b/index.html
@@ -40,19 +40,11 @@
       <h1>Qihong Lu</h1>
       <br>
 
-      <p class="view">
-        <h4>Home</h4>
-      </p>
-      <p class="view"><a href="research.html">
-          <h4>Research</h4>
-        </a></p>
-      <p class="view">
-        <h4><a href="teaching.html">Teaching</a></h4>
-      </p>
-      <!--     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p> -->
-      <p class="view"><a href="contact.html">
-          <h4>Contact</h4>
-        </a></p>
+      <p class="view"><h4>Home</h4></p>
+      <p class="view"><a href="research.html"><h4>Research</h4></a></p>
+      <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
+      <!-- <p class="view"><a href="photo.html"><h4>Photography</h4></a></p> -->
+      <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
       <br><br>
 
       <p class="view">
@@ -107,10 +99,11 @@
         <br>
         0. We just posted a preprint:
         <a href='https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1'>Learning to use episodic memory for event prediction</a> with
-        <a href='https://github.com/qihongl/learn-hippo'>code</a>! And I presented this work at
+        <a href='https://github.com/qihongl/learn-hippo'>code</a>!
+        And I presented this work at
         <a href='https://www.youtube.com/watch?v=IiJHdrqwVWE'>CNS 2021</a>,
-        <a href='https://www.saxelab.org/'>Oxford Neurotheory Lab,</a>
-        and Deepmind.
+        <a href='https://www.saxelab.org/'>Oxford Neurotheory Lab</a>,
+        and <a href='https://deepmind.com/'>Deepmind</a>.
 
         <br><br>
         1. I will be helping with
