--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
       <p class="view"><h4>Home</h4></p>
       <p class="view"><a href="research.html"><h4>Research</h4></a></p>
-      <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
-      <!-- <p class="view"><a href="photo.html"><h4>Photography</h4></a></p> -->
+      <p class="view"><h4><a href="teaching.html">Teaching</h4></a></p>
+      <p class="view"><a href="photo.html"><h4>Photography</h4></a></p>
       <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
       <br><br>
 
@@ -60,11 +60,6 @@
         <a href="https://www.instagram.com/lu.qihong/">
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
-
-      <!-- <p class="view">
-        <a href="mailto:qlu@princeton.edu" target="_top">
-          <img src="imgs/logo/email.png" alt="email" width=40px></a>
-      </p> -->
 
     </header>
 
@@ -106,8 +101,8 @@
         and <a href='https://deepmind.com/'>Deepmind</a>.
 
         <br><br>
-        1. I will be helping with
-        <a href='https://academy.neuromatch.io/'>Neuromatch Academy</a> to teach deep learning this August!
+        1. I 'm helping with
+        <a href='https://academy.neuromatch.io/'>Neuromatch Academy</a> to teach deep learning!
 
         <br><br>
         *. I'm organizing the weekly
