--- a/teaching.html
+++ b/teaching.html
@@ -40,20 +40,11 @@
       <h1>Qihong Lu</h1>
       <br>
 
-      <p class="view">
-        <h4><a href="index.html">Home</a></h4>
-      </p>
-      <p class="view">
-        <h4><a href="research.html">Research</a></h4>
-      </p>
-      <p class="view">
-        <h4>Teaching</h4>
-      <!-- </p>
-      <p class="view"><a href="resources.html">
-    <h4>Resources</h4>
-  </a></p> -->
-      <p class="view">
-        <h4><a href="contact.html">Contact</a></h4>
+      <p class="view"><h4><a href="index.html">Home</a></h4></p>
+      <p class="view"><h4><a href="research.html">Research</a></h4></p>
+      <p class="view"><h4>Teaching</h4></p>
+      <p class="view"><a href="photo.html"><h4>Photography</a></h4></p>
+      <p class="view"><h4><a href="contact.html">Contact</a></h4>
       </p>
       <br><br>
 
@@ -70,11 +61,6 @@
         <a href="https://www.instagram.com/lu.qihong/">
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
-
-      <!-- <p class="view">
-        <a href="mailto:qlu@princeton.edu" target="_top">
-          <img src="imgs/logo/email.png" alt="email" width=40px></a>
-      </p> -->
 
     </header>
 
@@ -257,17 +243,10 @@
       <!-- </p> -->
 
 
-
-
     </section>
 
     <!-- the END of right column  -->
 
-    <!-- <footer>
-    <p><small>Hosted on GitHub Pages<br>
-    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-    </small></p>
-</footer> -->
 
   </div>
   <script src="javascripts/scale.fix.js"></script>
