--- a/contact.html
+++ b/contact.html
@@ -40,21 +40,11 @@
       <h1>Qihong Lu</h1>
       <br>
 
-      <p class="view">
-        <h4><a href="index.html">Home</a></h4>
-      </p>
-      <p class="view">
-        <h4><a href="research.html">Research</a></h4>
-      </p>
-      <p class="view">
-        <h4><a href="teaching.html">Teaching</a></h4>
-      </p>
-      <!-- <p class="view">
-                <h4><a href="resources.html">Resources</a></h4>
-            </p> -->
-      <p class="view">
-        <h4>Contact<h4>
-      </p>
+      <p class="view"><h4><a href="index.html">Home</a></h4></p>
+      <p class="view"><h4><a href="research.html">Research</a></h4></p>
+      <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
+      <p class="view"><a href="photo.html"><h4>Photography</a></h4></p>
+      <p class="view"><h4>Contact<h4></p>
       <br><br>
 
       <p class="view">
@@ -71,10 +61,6 @@
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
 
-      <!-- <p class="view">
-        <a href="mailto:qlu@princeton.edu" target="_top">
-          <img src="imgs/logo/email.png" alt="email" width=40px></a>
-      </p> -->
 
     </header>
 
@@ -154,11 +140,6 @@
 
     <!-- the END of right column  -->
 
-    <!--       <footer>
-        <p><small>Hosted on GitHub Pages<br>
-        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-        </small></p>
-      </footer> -->
   </div>
   <script src="javascripts/scale.fix.js"></script>
 
