--- a/teaching.html
+++ b/teaching.html
@@ -72,18 +72,27 @@
 
 
       <p>
-        <strong>Summer 2021, Deep learning, <a href="https://academy.neuromatch.io/">Neuromatch Academy</a></strong>
-        <br>
-        &emsp;
-        <a href="https://github.com/NeuromatchAcademy/course-content-dl">syllabus</a>
+        <h3>Summer 2021, Deep learning, <a href="https://academy.neuromatch.io/">Neuromatch Academy</a></h3>
+
+        <ul>
+          <li>
+            <a href="https://github.com/NeuromatchAcademy/course-content-dl">Syllabus</a>
+          </li>
+          <li>
+            <a href="https://deeplearning.neuromatch.io/tutorials/intro.html">eBook</a>
+          </li>
+          <li>
+            <a href="https://github.com/NeuromatchAcademy/course-content-dl/tree/main/tutorials">All notebooks / videos / slides</a>
+          </li>
+        </ul>
+
         <br><br>
       </p>
 
       <hr>
 
       <p>
-        <strong>Fall 2018 & Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
-        <br>
+        <h3>Fall 2018 & Spring 2021, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</h3>
         &emsp;
         <a href="https://registrar.princeton.edu/course-offerings/course-details?term=1214&courseid=011565">offcial course description</a>
         |
@@ -128,8 +137,7 @@
 
 
       <p>
-        <strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
-        <br>
+        <h3>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</h3>
         &emsp;
         <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
         |
