--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         and
         <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
         at Princeton.
-        I use computational models to understand how episodic memory can be most effectively deployed in the service of event processing.
+        I use neural network models to understand how episodic memory can be most effectively deployed in the service of event processing.
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
-        <br><br><br>
+        <!-- <br><br><br>
         News:
         <br>
         0. We just posted a preprint:
@@ -98,16 +98,16 @@
         And I presented this work at
         <a href='https://www.youtube.com/watch?v=IiJHdrqwVWE'>CNS 2021</a>,
         <a href='https://www.saxelab.org/'>Oxford Neurotheory Lab</a>,
-        and <a href='https://deepmind.com/'>Deepmind</a>.
+        and <a href='https://deepmind.com/'>Deepmind</a>. -->
 
-        <br><br>
+        <!-- <br><br>
         1. I 'm helping with
         <a href='https://academy.neuromatch.io/'>Neuromatch Academy</a> to teach deep learning!
 
         <br><br>
         *. I'm organizing the weekly
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
-        feel free to contact me if you would like to give a talk!
+        feel free to contact me if you would like to give a talk! -->
 
     </section>
 
