--- a/research.html
+++ b/research.html
@@ -102,6 +102,21 @@
         <div id="paper" class="tabcontent" style="display:block"><br>
 
           <p>
+            <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction</b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2021).
+            <br>
+            bioRxiv.
+            <br>
+            <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v2">paper</a>,
+            <a href="https://github.com/qihongl/learn-hippo">code</a>
+
+            <br>
+          </p>
+          <br>
+
+
+          <p>
             <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
             <br>
             Chen, C., Lu, Q., Beukers, A., Baldassano, C., Norman, K. A. (2021)
@@ -110,20 +125,6 @@
             <br>
             <a href="https://peerj.com/articles/11046/">paper</a>,
             <a href="https://github.com/cchen23/generalized_schema_learning">code</a>
-          </p>
-          <br>
-
-          <p>
-            <b>Learning to use episodic memory for event prediction</b>
-            <br>
-            Lu, Q., Hasson, U., & Norman, K. A. (2020).
-            <br>
-            bioRxiv.
-            <br>
-            <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>,
-            <a href="https://github.com/qihongl/learn-hippo">code</a>
-
-            <br>
           </p>
           <br>
 
@@ -142,7 +143,6 @@
             <br>
           </p>
           <br>
-
 
 
           <p>
