--- a/research.html
+++ b/research.html
@@ -128,14 +128,14 @@
           <br>
 
           <p>
-            <!-- <b>Evidence for a deep, distributed and dynamic semantic code in human ventral anterior temporal cortex</b> -->
-            <b>A deep, distributed, and dynamic code for animacy in human anterior temporal cortex</b>
+
+            <b>Evidence for a deep, distributed and dynamic code for animacy in human ventral anterior temporal cortex</b>
             <br>
             Rogers, T. T., Cox, C., Lu, Q., Shimotake, A., Kikuch, T., Kunieda, T., Miyamoto, S., Takahashi, R., Ikeda, A., Matsumoto, R., Lambon Ralph, M. A. (2021)
             <br>
-            Elife
+            eLife
             <br>
-            <a href="https://www.biorxiv.org/content/10.1101/695049v1?rss=1">paper</a>
+            <a href="https://elifesciences.org/articles/66276">paper</a>,
             <a href="https://github.com/ttrogers/DecodingDynamic">code</a>
             <br>
           </p>
