--- a/research.html
+++ b/research.html
@@ -102,18 +102,34 @@
         <div id="paper" class="tabcontent" style="display:block"><br>
 
           <p>
-            <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction</b>
+            <b>A Neural Network Model of When to Retrieve and Encode Episodic Memories</b>
             <br>
             Lu, Q., Hasson, U., & Norman, K. A. (2021).
             <br>
-            bioRxiv.
+            eLife
             <br>
-            <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v2">paper</a>,
+            <a href="https://elifesciences.org/articles/74445">paper</a>,
+            <!-- <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v2">biorxiv</a>, -->
             <a href="https://github.com/qihongl/learn-hippo">code</a>
             <br>
           </p>
           <br>
 
+
+          <p>
+            <b>BrainIAK: Brain Imaging and Analysis Kit</b>
+            <br>
+            Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., Lu, Q., Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R.,
+            Schapiro, A.C., Schuck, N.W., Shvartsman, M., Sundaram, N., Suo, D., Turek, J.S., Vo, V.A., Wallace, G., Wang, Y., Zhang, H., Zhu, X., Capota, M., Cohen, J.D., Hasson, U., Li, K., Ramadge, P.J., Turk-Browne, N.B., Willke, T.L. & Norman,
+            K.A. (2022)
+            <br>
+            Aerture Neuro
+            <br>
+            <a href="https://apertureneuropub.cloud68.co/articles/42/index.html">paper</a>,
+            <a href="https://brainiak.org/">software</a>
+            <br>
+          </p>
+          <br>
 
           <p>
             <b>Learning to Perform Role-Filler Binding with Schematic Knowledge</b>
@@ -146,24 +162,9 @@
             <br>
             Lu, Q., Hasson, U., & Norman, K. A. (2020).
             <br>
-            bioRxiv.
+            bioRxiv
             <br>
             <a href="https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1">paper</a>
-            <br>
-          </p>
-          <br>
-
-          <p>
-            <b>BrainIAK: Brain Imaging and Analysis Kit</b>
-            <br>
-            Kumar, M., Anderson, M.J., Antony, J.W., Baldassano C., Brooks, P.P., Cai, M.B., Chen, P.H.C., Ellis, C.T., Henselman-Petrusek, G., Huberdeau, D., Hutchinson, J.B., Li, P.Y., Lu, Q., Manning, J.R., Mennen, A.C., Nastase, S.A., Hugo, R.,
-            Schapiro, A.C., Schuck, N.W., Shvartsman, M., Sundaram, N., Suo, D., Turek, J.S., Vo, V.A., Wallace, G., Wang, Y., Zhang, H., Zhu, X., Capota, M., Cohen, J.D., Hasson, U., Li, K., Ramadge, P.J., Turk-Browne, N.B., Willke, T.L. & Norman,
-            K.A. (2020)
-            <br>
-            OSF preprints.
-            <br>
-            <a href="https://osf.io/db2ev/">paper</a>,
-            <a href="https://github.com/brainiak/brainiak-aperture">code</a>
             <br>
           </p>
           <br>
@@ -174,7 +175,7 @@
             <br>
             Kumar, M., Ellis, C. T., Lu, Q., Zhang, H., Capotă, M., Willke, T. L., Ramadge, P. J., Turk-Browne, N. B., & Norman, K. A. (2020).
             <br>
-            PLoS Computational Biology, 16(1), e1007549.
+            PLoS Computational Biology
             <br>
             <a href="https://doi.org/10.1371/journal.pcbi.1007549">paper</a>,
             <a href="https://brainiak.org/tutorials/">tutorial</a>,
@@ -206,12 +207,40 @@
           </p>
 
 
-
-
           </p>
         </div>
 
         <div id="talk" class="tabcontent"><br>
+
+          <!-- <p>
+            <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <br>
+            Penn Computational Cognitive Neuroscience Lab. University of Pennsylvania. PI: Anna Schapiro
+            <br>
+          </p>
+          <br> -->
+
+          <!-- <p>
+            <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <br>
+            Chinese Institute for Brain Research and Beijing Normal University. PI: Yunzhe Liu
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>When to retrieve and encode episodic memories: a neural network model of hippocampal-cortical interaction. </b>
+            <br>
+            Lu, Q., Hasson, U., & Norman, K. A. (2022).
+            <br>
+            Mila Neural-AI Reading Group.
+            <br>
+          </p>
+          <br> -->
 
           <p>
             <b>Why should episodic retrieval and encoding occur selectively. </b>
