--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
         I use neural network models to understand how episodic memory can be most effectively deployed in the service of event processing.
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
-        <!-- <br><br><br>
+        <br><br><br>
         News:
         <br>
-        0. We just posted a preprint:
-        <a href='https://www.biorxiv.org/content/10.1101/2020.12.15.422882v1'>Learning to use episodic memory for event prediction</a> with
-        <a href='https://github.com/qihongl/learn-hippo'>code</a>!
-        And I presented this work at
-        <a href='https://www.youtube.com/watch?v=IiJHdrqwVWE'>CNS 2021</a>,
-        <a href='https://www.saxelab.org/'>Oxford Neurotheory Lab</a>,
-        and <a href='https://deepmind.com/'>Deepmind</a>. -->
+        [2022/05] I’m currently working on computational modeling of neuromotor interfaces
+        as a research scientist intern at the CTRL labs @ Meta!
+        <br>
+        <br>
+        [2022/04] Super excited to announce that our recent work is officially out in eLife:
+        a neural network model of when to retrieve and encode episodic memories to predict upcoming events.
+        Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>!
 
         <!-- <br><br>
         1. I 'm helping with
@@ -107,7 +107,7 @@
         <br><br>
         *. I'm organizing the weekly
         <a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a> at Princeton,
-        feel free to contact me if you would like to give a talk! -->
+        feel free to contact me if you would like to give a talk!
 
     </section>
 
