--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
         <br><br><br>
         News:
         <br>
-        [2022/05] I’m currently working on computational modeling of neuromotor interfaces
-        as a research scientist intern at the CTRL labs @ Meta!
+        [2022/05] I’m currently working on neuromotor interfaces
+        as a research scientist intern at the
+        <a href='https://about.fb.com/news/2021/03/inside-facebook-reality-labs-wrist-based-interaction-for-the-next-computing-platform/'>
+          CTRL labs</a>
+        @ Facebook Reality Labs!
         <br>
         <br>
         [2022/04] Super excited to announce that our recent work is officially out in eLife:
