--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         I use neural network models to understand how episodic memory can be most effectively deployed in the service of event processing.
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
-        <br><br><br>
+        <!-- <br><br><br>
         News:
         <br>
         [2022/05] I’m currently working on neuromotor interfaces
@@ -101,7 +101,7 @@
         <br>
         [2022/04] Super excited to announce that our recent work is officially out in eLife:
         a neural network model of when to retrieve and encode episodic memories to predict upcoming events.
-        Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>!
+        Here's the <a href='https://elifesciences.org/articles/74445'>paper</a> and the <a href='https://github.com/qihongl/learn-hippo'>repo</a>! -->
 
         <!-- <br><br>
         1. I 'm helping with
