--- a/research.html
+++ b/research.html
@@ -92,7 +92,7 @@
 
           <li>
             <a href="#" class="tablinks" onclick="openTab(event, 'poster')">
-              Posters
+              Posters & Conference Proceedings
             </a>
           </li>
 
