--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </center>
 
       <p>
-        Hi, my name is Qihong Lu.
+        Hi, my name is Qihong Lu (吕其鸿).
         I'm a PhD candidate with
         <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
         and
@@ -88,6 +88,10 @@
         at Princeton.
         I use neural network models to understand how episodic memory can be most effectively deployed in the service of event processing.
         Here's my <a href="docs/CV_QL.pdf">CV</a>.
+
+        <br><br>
+        I did my undergrad in Mathematics and Psychology at the University of Wisconsin-Madison.
+        I originally came from Shanghai, China.
 
         <!-- <br><br><br>
         News:
